<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".SelectPage">

    <Button
        android:id="@+id/btn_transferAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_select_btn1"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline13" />

    <Button
        android:id="@+id/btn_PhotoAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_select_btn2"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toStartOf="@+id/guideline14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="645dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="48dp"
        android:layout_height="51dp"
        android:contentDescription="@string/description_arrow"
        app:layout_constraintBottom_toTopOf="@+id/btn_transferAction"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:srcCompat="@drawable/outline_south_24" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="48dp"
        android:layout_height="51dp"
        android:contentDescription="@string/description_arrow"
        app:layout_constraintBottom_toTopOf="@+id/btn_PhotoAction"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:srcCompat="@drawable/outline_south_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="35dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="35dp" />

    <ImageView
        android:id="@+id/Iv_osNotice"
        android:layout_width="33dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/description_os_notification"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_notifications_24" />

    <TextView
        android:id="@+id/Tv_transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/string_explain_transfer1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/guideline13" />

    <TextView
        android:id="@+id/Tv_photo"
        android:layout_width="52dp"
        android:layout_height="23dp"
        android:fontFamily="serif"
        android:text="@string/string_explain_photo1"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/guideline14" />

    <TextView
        android:id="@+id/TV_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/string_explain_welcome"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="157dp" />

    <TextView
        android:id="@+id/Tv_welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/string_explain_welcome2"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/TV_welcome" />

    <ImageView
        android:id="@+id/Iv_Logo"
        android:layout_width="176dp"
        android:layout_height="225dp"
        android:contentDescription="@string/description_logo"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/Tv_welcome2"
        app:srcCompat="@drawable/temp_logo2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/string_explain_transfer2"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/guideline13" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/string_explain_photo2"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/guideline14" />
</androidx.constraintlayout.widget.ConstraintLayout>