<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".Notification">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tV_blank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tV_os_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_os_notification"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tV_blank2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/Tv_magenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_notification_magenta"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Tv_linkMagenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/string_link_magenta"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Tv_magenta_licence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_notification_magenta_licence"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Tv_link_magenta_licence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/string_link_magenta_licence"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>