<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectModel">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btn_model1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_model1" />

        <Button
            android:id="@+id/btn_model2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_model2" />

        <Button
            android:id="@+id/btn_Model3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_model3" />

        <Button
            android:id="@+id/btn_defaultModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_default_model" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_selectModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_close_model"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modelText" />

    <TextView
        android:id="@+id/modelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_select_model"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_selectModel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="329dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="400dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="431dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_lookupModel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="▶" />

        <Button
            android:id="@+id/btn_lookupModel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="▶" />

        <Button
            android:id="@+id/btn_lookupModel3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="▶" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>